brat/test/golden/error/fanin-dynamic-length.brat
f(n :: #) -> { Qubit, Qubit -o Vec(Qubit, n) }
f(n) = { [\/] }
